--- a/[SOFMETH] MCO3/nbproject/project.properties
+++ b/[SOFMETH] MCO3/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=[SOFMETH] MCO3
+application.vendor=Ramon
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,11 +27,20 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/_SOFMETH__MCO3.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.poi-3.14-20160307.jar=C:\\poi-3.14\\poi-3.14-20160307.jar
+file.reference.poi-ooxml-3.14-20160307.jar=C:\\poi-3.14\\poi-ooxml-3.14-20160307.jar
+file.reference.poi-ooxml-schemas-3.14-20160307.jar=C:\\poi-3.14\\poi-ooxml-schemas-3.14-20160307.jar
+file.reference.xmlbeans-2.6.0.jar=C:\\poi-3.14\\ooxml-lib\\xmlbeans-2.6.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.poi-3.14-20160307.jar}:\
+    ${file.reference.poi-ooxml-3.14-20160307.jar}:\
+    ${file.reference.poi-ooxml-schemas-3.14-20160307.jar}:\
+    ${file.reference.xmlbeans-2.6.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -59,7 +69,7 @@ main.class=sofmeth.mco3.gui.MainMenu
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.8
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
