--- a/[SOFMETH] MCO3/nbproject/project.properties
+++ b/[SOFMETH] MCO3/nbproject/project.properties
@@ -30,9 +30,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.poi-3.14-20160307.jar=C:\\poi-3.14\\poi-3.14-20160307.jar
+file.reference.poi-3.14-20160307.jar-1=C:\\Users\\owner\\Documents\\NetBeansProjects\\poistuff\\poi-3.14\\poi-3.14-20160307.jar
 file.reference.poi-ooxml-3.14-20160307.jar=C:\\poi-3.14\\poi-ooxml-3.14-20160307.jar
+file.reference.poi-ooxml-3.14-20160307.jar-1=C:\\Users\\owner\\Documents\\NetBeansProjects\\poistuff\\poi-3.14\\poi-ooxml-3.14-20160307.jar
 file.reference.poi-ooxml-schemas-3.14-20160307.jar=C:\\poi-3.14\\poi-ooxml-schemas-3.14-20160307.jar
+file.reference.poi-ooxml-schemas-3.14-20160307.jar-1=C:\\Users\\owner\\Documents\\NetBeansProjects\\poistuff\\poi-3.14\\poi-ooxml-schemas-3.14-20160307.jar
 file.reference.xmlbeans-2.6.0.jar=C:\\poi-3.14\\ooxml-lib\\xmlbeans-2.6.0.jar
+file.reference.xwpf-usermodel=C:\\Users\\owner\\Documents\\NetBeansProjects\\poistuff\\poi-3.14\\docs\\apidocs\\org\\apache\\poi\\xwpf\\usermodel
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -40,7 +44,11 @@ javac.classpath=\
     ${file.reference.poi-3.14-20160307.jar}:\
     ${file.reference.poi-ooxml-3.14-20160307.jar}:\
     ${file.reference.poi-ooxml-schemas-3.14-20160307.jar}:\
-    ${file.reference.xmlbeans-2.6.0.jar}
+    ${file.reference.xmlbeans-2.6.0.jar}:\
+    ${file.reference.xwpf-usermodel}:\
+    ${file.reference.poi-3.14-20160307.jar-1}:\
+    ${file.reference.poi-ooxml-3.14-20160307.jar-1}:\
+    ${file.reference.poi-ooxml-schemas-3.14-20160307.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -69,7 +77,7 @@ main.class=sofmeth.mco3.gui.MainMenu
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_1.8
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
